	* Fixed NullPointerException for mob skills.
	* Allow movement between The Forest East of Henesys and On the Way to the
	Harbor.

2012-10-26  GoldenKevin  (revision 152)

	* Fixed scripted portals being silent when entered.
	* Fixed broken second job advancement to crossbowmen and bandits.
	* Added full support for Camila's Gem jump quest.

2012-10-27  GoldenKevin  (revision 153)

	* All NPC scripts account for a full inventory before giving any items.

2012-10-27  GoldenKevin  (revision 154)

	* Added NPCs and NPC stubs for NPCs in New Leaf City.
	* Added persistent event for subway between New Leaf City and Kerning City,
	and enabled it by default in game*.properties
	* Fixed Kerning City ticket gate not taking basic tickets to New Leaf City.
	* Fixed Kerning City ticket seller giving the wrong items.
	* Ellinia Station ticket usher does not allow a player to visit Orbis unless
	the ship_ossyria persistent event is enabled. The player is no longer
	instantly warped there.

2012-10-27  GoldenKevin  (revision 155)

	* StatAllocationHandler now mutexes SP and AP allocation so concurrent
	modifications by "megatubi" enabled clients don't cause issues.
	* Fixed ticket gates for Kerning City and New Leaf City subways.
	* Fixed Magic Guard not burning additional HP if MP is depleted.
	* Added a stub to handling the Dispel skill (including a new method that is
	application for other party skills).

2012-10-29  GoldenKevin  (revision 156)

	* Refactored `shopitems` table in default_shops.sql so the `shops` table is
	no longer needed.
	* Added shops for Nautilus.
	* Removed some inaccurate shop items.
	* Added bullets in applicable shops.
	* Fixed portal to Utah's Pig Farm.
	* Fixed NPC script for trash can in Nautilus.
	* Fixed Speed Potions.

Copyright 2011-2012 GoldenKevin
Copying and distribution of this file, with or without modification, are
permitted provided the copyright notice and this notice are preserved.